# Online-Voting-System-Project

./: .gitignore  CMakeLists.txt  Online_Voting_System.cpp  README.md  catch2_tests.cpp  gtest_tests.cpp  parties.txt  results.txt  test_online_voting_system.cpp  voters.txt
.github/workflows/: tests.yml
